2005-07-23  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai: Add timeout parameter to all rt_*_bind() services.

	* skins/rtai/mutex.c (rt_mutex_lock): Add timeout parameter.

2005-07-22  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (xnshadow_harden): Export.

	* include/nucleus/asm-generic/hal.h: Add RTHAL virtualization
	level.

	* skins/rtdm: Merge RTDM patch level #4.

2005-07-20  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (__switch_threads): Make sure
	we don't lose the thread i/o privileges across switches: save the
	EFLAGS, damnit! This bug was raised in VSYSCALL mode only upon
	primary -> secondary transitions, since the legacy mode always
	restores the caller's IRET frame.

	* skins/rtai/syscall.c (__rt_task_set_mode): Fix order of
	parameters.
	(__rt_task_set_mode): Properly switch to secondary mode if
	T_PRIMARY in found in the clrmask.
	(__rt_task_set_mode): Remove useless check for current shadow;
	this call is already tagged as __xn_exec_primary.

	* include/nucleus/asm-*/syscall.h: Propagate return values from
	__xn_copy_from_user/__xn_copy_to_user.

	* skins/rtdm: Merge Real-Time Driver Model.

2005-07-18  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/system.h: Make all user-space readers
	include <bits/local_lim.h> to get PTHREAD_STACK_MIN defined, even
	with weird glibc setups.

	* skins/rtai/registry.h: Remove spurious external declaration of
	__rtai_obj_slots[].

	* nucleus/pipe.c (xnpipe_read): Allow the output handler to
	override the return code.
	(xnpipe_write): Always enqueue the incoming message regardless of
	the presence of an input handler. This means that such handler
	should call xnpipe_recv() to dequeue it first, if the message is
	to be routed elsewhere.

	* nucleus/timer.c (xntimer_start): Starting a timer cannot
	fail: make this routine a void one.

2005-07-17  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc64, include/nucleus/asm-ppc64: Merge the ppc64 port, a