@@ -51,70 +51,71 @@
 #define __rtai_timer_ns2ticks     25
 #define __rtai_timer_ticks2ns     26
 #define __rtai_timer_inquire      27
-#define __rtai_sem_create         28
-#define __rtai_sem_bind           29
-#define __rtai_sem_delete         30
-#define __rtai_sem_p              31
-#define __rtai_sem_v              32
-#define __rtai_sem_broadcast      33
-#define __rtai_sem_inquire        34
-#define __rtai_event_create       35
-#define __rtai_event_bind         36
-#define __rtai_event_delete       37
-#define __rtai_event_wait         38
-#define __rtai_event_signal       39
-#define __rtai_event_clear        40
-#define __rtai_event_inquire      41
-#define __rtai_mutex_create       42
-#define __rtai_mutex_bind         43
-#define __rtai_mutex_delete       44
-#define __rtai_mutex_lock         45
-#define __rtai_mutex_unlock       46
-#define __rtai_mutex_inquire      47
-#define __rtai_cond_create        48
-#define __rtai_cond_bind          49
-#define __rtai_cond_delete        50
-#define __rtai_cond_wait          51
-#define __rtai_cond_signal        52
-#define __rtai_cond_broadcast     53
-#define __rtai_cond_inquire       54
-#define __rtai_queue_create       55
-#define __rtai_queue_bind         56
-#define __rtai_queue_delete       57
-#define __rtai_queue_alloc        58
-#define __rtai_queue_free         59
-#define __rtai_queue_send         60
-#define __rtai_queue_recv         61
-#define __rtai_queue_inquire      62
-#define __rtai_heap_create        63
-#define __rtai_heap_bind          64
-#define __rtai_heap_delete        65
-#define __rtai_heap_alloc         66
-#define __rtai_heap_free          67
-#define __rtai_heap_inquire       68
-#define __rtai_alarm_create       69
-#define __rtai_alarm_delete       70
-#define __rtai_alarm_start        71
-#define __rtai_alarm_stop         72
-#define __rtai_alarm_wait         73
-#define __rtai_alarm_inquire      74
-#define __rtai_intr_create        75
-#define __rtai_intr_bind          76
-#define __rtai_intr_delete        77
-#define __rtai_intr_wait          78
-#define __rtai_intr_enable        79
-#define __rtai_intr_disable       80
-#define __rtai_intr_inquire       81
-#define __rtai_pipe_create        82
-#define __rtai_pipe_bind          83
-#define __rtai_pipe_delete        84
-#define __rtai_pipe_read          85
-#define __rtai_pipe_write         86
-#define __rtai_pipe_stream        87
-#define __rtai_misc_get_io_region 88
-#define __rtai_misc_put_io_region 89
-#define __rtai_timer_ns2tsc       90
-#define __rtai_timer_tsc2ns       91
+#define __rtai_timer_spin         28
+#define __rtai_sem_create         29
+#define __rtai_sem_bind           30
+#define __rtai_sem_delete         31
+#define __rtai_sem_p              32
+#define __rtai_sem_v              33
+#define __rtai_sem_broadcast      34
+#define __rtai_sem_inquire        35
+#define __rtai_event_create       36
+#define __rtai_event_bind         37
+#define __rtai_event_delete       38
+#define __rtai_event_wait         39
+#define __rtai_event_signal       40
+#define __rtai_event_clear        41
+#define __rtai_event_inquire      42
+#define __rtai_mutex_create       43
+#define __rtai_mutex_bind         44
+#define __rtai_mutex_delete       45
+#define __rtai_mutex_lock         46
+#define __rtai_mutex_unlock       47
+#define __rtai_mutex_inquire      48
+#define __rtai_cond_create        49
+#define __rtai_cond_bind          50
+#define __rtai_cond_delete        51
+#define __rtai_cond_wait          52
+#define __rtai_cond_signal        53
+#define __rtai_cond_broadcast     54
+#define __rtai_cond_inquire       55
+#define __rtai_queue_create       56
+#define __rtai_queue_bind         57
+#define __rtai_queue_delete       58
+#define __rtai_queue_alloc        59
+#define __rtai_queue_free         60
+#define __rtai_queue_send         61
+#define __rtai_queue_recv         62
+#define __rtai_queue_inquire      63
+#define __rtai_heap_create        64
+#define __rtai_heap_bind          65
+#define __rtai_heap_delete        66
+#define __rtai_heap_alloc         67
+#define __rtai_heap_free          68
+#define __rtai_heap_inquire       69
+#define __rtai_alarm_create       70
+#define __rtai_alarm_delete       71
+#define __rtai_alarm_start        72
+#define __rtai_alarm_stop         73
+#define __rtai_alarm_wait         74
+#define __rtai_alarm_inquire      75
+#define __rtai_intr_create        76
+#define __rtai_intr_bind          77
+#define __rtai_intr_delete        78
+#define __rtai_intr_wait          79
+#define __rtai_intr_enable        80
+#define __rtai_intr_disable       81
+#define __rtai_intr_inquire       82
+#define __rtai_pipe_create        83
+#define __rtai_pipe_bind          84
+#define __rtai_pipe_delete        85
+#define __rtai_pipe_read          86
+#define __rtai_pipe_write         87
+#define __rtai_pipe_stream        88
+#define __rtai_misc_get_io_region 89
+#define __rtai_misc_put_io_region 90
+#define __rtai_timer_ns2tsc       91
+#define __rtai_timer_tsc2ns       92
 
 struct rt_arg_bulk {
 
